06_rect/grade.txt
Grading at Mon Dec 28 14:45:25 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:56:7: error: ‘r_ret’ undeclared (first use in this function)
       r_ret.x = max(r1.x,r2.x);
       ^
rectangle.c:56:7: note: each undeclared identifier is reported only once for each function it appears in
rectangle.c:49:13: error: unused variable ‘r_int’ [-Werror=unused-variable]
   rectangle r_int;
             ^
rectangle.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
